--- a/package.json
+++ b/package.json
@@ -8,17 +8,39 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.13.0",
+    "@types/redux": "^3.6.0",
+    "color": "^3.1.3",
     "expo": "~41.0.1",
+    "expo-calendar": "^9.1.2",
+    "expo-image-picker": "~10.1.4",
+    "expo-linear-gradient": "^9.1.0",
     "expo-status-bar": "~1.0.4",
+    "moment": "^2.29.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
-    "react-native-web": "~0.13.12"
+    "react-native-calendar-events": "^2.2.0",
+    "react-native-floating-action": "^1.21.0",
+    "react-native-get-random-values": "^1.7.0",
+    "react-native-image-viewing": "^0.2.0",
+    "react-native-linear-gradient": "^2.5.6",
+    "react-native-swipe-list-view": "^3.2.7",
+    "react-native-web": "~0.13.12",
+    "react-redux": "^7.2.4",
+    "redux": "^4.1.0",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.3.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
+    "@types/color": "^3.0.1",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
+    "@types/react-redux": "^7.1.16",
+    "@types/uuid": "^8.3.0",
     "typescript": "~4.0.0"
   },
   "private": true
